<resources>
    <string name="app_name">Install Lion</string>
    <string name="title_instructions_before_use">Instructions before use</string>
    <string name="tv_instructions_before_use">\nThe main function of this App is to install apk and uninstall the application\n
        \nMost custom systems other than native Android cannot be set as default installation and uninstallation applications due to system limitations, and the system will almost always let the system\'s default package installer handle it when initiating the installation,and there is no good solution.\n
        \nIn this case,you can use the \"Pick a file to install\" function in this App,use a file manager that supports selecting the open way or share the APK to Install Lion to initiate the installation.\n
        \nImportant：Please try these steps if the installation failed——turn off Google Play\'s security scan; turn on the USB installation in the developer options, turn off the \"Monitor adb installation\", etc to prevent the installation from failing.\n
        \nAndroid 11 devices please grant \"All files access\"\n
        \nInstall Lion will track bugs through network for optimization and improvement.You can disable it in the settings.\n
        \nFriendly reminder：
        \nThe \"Package installer\" of the Android system is not only used for installation and uninstallation, but also an important system component for managing permissions.It is strongly recommended not to freeze arbitrarily or perform other dangerous operations！\n
    </string>
    <string name="checkbox1_instructions_before_use">I have fully understood</string>
    <string name="checkbox2_instructions_before_use">No longer prompt</string>
    <string name="channalname_fail">Installed failed</string>
    <string name="checkbox_always_allow">Always Allow %1$s</string>
    <string name="checkbox_clearAllowedList">Confirm Clear</string>
    <string name="checkbox_installsource_unkonwn">Unknown installation source</string>
    <string name="title_manageAllowSource">Manage allowed installation list</string>
    <string name="title_clearAllowedList">Clear allowed installation list</string>
    <string name="click_delete_apk">Delete apk</string>
    <string name="tip_delete_apk_success">The APK has been deleted</string>
    <string name="tip_delete_apk_fail">Delete APK Failed</string>
    <string name="click_launch">Launch</string>
    <string name="click2requestpermission">Click to request permissions</string>
    <string name="confirm_title">Confirmation before installation</string>
    <string name="enable_title">Enable installer</string>
    <string name="hideIcon">Hide icon</string>
    <string name="hideIconByTranslucent">Replace hidden with transparent icons</string>
    <string name="installer_device">Device</string>
    <string name="installer_error_shell">%s installer error:\n\n%s</string>
    <string name="installer_error_shizuku_unavailable">Unable to access Shizuku service</string>
    <string name="installer_error_unknown_apk_size">Installer error unknown apk size</string>
    <string name="launch_name">Run app</string>
    <string name="message_clearAllowedList">\nClear the list of apps you don\'t need to confirm before installation\n</string>
    <string name="message_hideIcon">You can launch the App in the following way\n\n1.System App Info-Manage space\n2.Dialer *#*#297297#*#*\n3.System App Info-Additional settings\n</string>
    <string name="tv_packagename">Package Name：</string>
    <string name="tv_size_apk">Size：</string>
    <string name="message_confirm_uninstall">\nConfirm uninstallation?</string>
    <string name="tv_version_apk">Version：</string>
    <string name="tv_version_app">Existed：</string>
    <string name="name_install1">Install Lion-IceBox</string>
    <string name="name_install2">Install Lion-DSM</string>
    <string name="name_install3">Install Lion-Shizuku</string>
    <string name="name_install4">Install Lion-Root</string>
    <string name="name_install5">Install Lion-DPM</string>
    <string name="name_install6">Install Lion-Custom</string>
    <string name="summary_notexist">Not exist！</string>
    <string name="summary_permission_no">Unauthorized！</string>
    <string name="summary_permission_yes">Authorized</string>
    <string name="Settings">Setting</string>
    <string name="summary_av_no">Unavailable！</string>
    <string name="summary_av_yes">Available</string>
    <string name="summary_av_ok_installer">Available now</string>
    <string name="summary_manualAuthorize">MIUI may need to disable MIUI optimization</string>
    <string name="summary_off_needconfirm">Never display a confirmation dialog  before installation</string>
    <string name="summary_on_needconfirm">User selects the application without confirmation before installation</string>
    <string name="summaryOff">Disabled</string>
    <string name="summaryOn">Enabled</string>
    <string name="tip_exit">Press back again to exit</string>
    <string name="tip_failed_install">%1$s Installed failed</string>
    <string name="tip_copy_to_clipboard">Copied to the clipboard</string>
    <string name="tip_failed_install_witherror">%1$s Installed failed,The error has been copied to the clipboard\n%2$s</string>
    <string name="tip_failed_prase">Unable to parse</string>
    <string name="tip_failed_read">Reading apk failed</string>
    <string name="tip_failed_uninstall">%1$s Uninstalled failed</string>
    <string name="tip_failed_uninstall_witherror">%1$s Uninstalled failed,The error has been copied to the clipboard\n%2$s</string>
    <string name="tip_try_install_end">Attempt to install has ended.The result is unknown.</string>
    <string name="content_title_install_end">%1$s attempt to install has ended</string>
    <string name="tip_ltsdk26">Only supports Android 8.0 and above devices</string>
    <string name="tip_manualAuthorize">Please find the app and authorize it manually</string>
    <string name="tip_start_install">Start installing  %1$s</string>
    <string name="tip_use_to_install">Use %1$s to install %2$s</string>
    <string name="tip_use_to_uninstall">Use %1$s to uninstall %2$s</string>
    <string name="tip_start_uninstall">Start uninstalling  %1$s</string>
    <string name="tip_success_install">%1$s Installed succeed</string>
    <string name="tip_success_uninstall">%1$s Uninstalled succeed</string>
    <string name="title_delegated_authorization_state">Delegated authorization state</string>
    <string name="title_dialog_uninstall">Uninstallation</string>
    <string name="title_installer_available_state">Available state</string>
    <string name="title_manualAuthorize">Click to manually authorize</string>
    <string name="title_shizuku_service_state">Shizuku service state</string>
    <string name="unknown">Unknown</string>
    <string name="summary_check_shizuku_service">Check Shizuku service</string>
    <string name="summary_go_shizuku">Click to go to Shizuku to check</string>
    <string name="title_delegated_OwnerPackageNameAndSDKVersion">Owner package name and SDK version</string>
    <string name="title_icebox__authorization_state">Ice Box authorization state</string>
    <string name="title_icebox_support_state">Ice Box support state</string>
    <string name="title_shizuku_authorization_state">Shizuku authorization state</string>
    <string name="tip_failed_get_content">Get Failed</string>
    <string name="checkbox_deactivate">Confirm Deactivate</string>
    <string name="tip_start_activating">Trying to activate</string>
    <string name="tip_success_deactivate">Cancel succeed</string>
    <string name="tip_failed_deactivate">Unable to deactivate</string>
    <string name="title_not_deviceowner">Not the Device Owner currently</string>
    <string name="title_custom_installer">Current： %s</string>
    <string name="title_set_custom_installer">Set the custom installer</string>
    <string name="message_set_custom_installer">\nPlease enter the package name or full activity name of the specified application</string>
    <string name="hint_set_custom_installer">For example：com.android.packageinstaller\nor com.google.android.packageinstaller/com.android.packageinstaller.InstallStart</string>
    <string name="tip_not_set_custom_installer">You have not set the custom installer</string>
    <string name="tip_invalid__custom_installer">failed！Custom installer %s is valid</string>
    <string name="summary_clicktocopycmd">\n%1$sn(Click to copy)</string>
    <string name="title_deactivate_deviceowner">Deactivate Device Owner</string>
    <string name="message_deactivate">\nThis operation is irrevocable\n\nMake sure you have unlocked unnecessary default apps\n</string>
    <string name="tip_ltsdk23">Only supports Android 6.0 and above devices</string>
    <string name="title_systemSettings">System Settings</string>
    <string name="title_DISALLOW_INSTALL_APPS">Disallow install Apps</string>
    <string name="title_DISALLOW_UNINSTALL_APPS">Disallow uninstall Apps</string>
    <string name="title_DISALLOW_INSTALL_UNKNOWN_SOURCES">Disallow install unknown sources Apps</string>
    <string name="title_DISALLOW_ADD_MANAGED_PROFILE">Disallow add managed profiles</string>
    <string name="title_uninstallApp">Uninstall app</string>
    <string name="title_clearCache">Click to clear cache</string>
    <string name="tip_success_clear_cache">Clean up</string>
    <string name="summary_clearCache">Current cache size：%s</string>
    <string name="PickFileToInstall">Pick a file to install</string>
    <string name="title_pickUninstaller">Pick a uninstaller</string>
    <string name="message_uninstallPackageName">Please enter the package name of the application</string>
    <string name="title_RebootDevice">Reboot device now</string>
    <string name="title_dpm_settings">Device Owner settings</string>
    <string name="title_lockDefaultApp">Lock Default App</string>
    <string name="title_display">Display</string>
    <string name="title_general">General</string>
    <string name="title_SetOrganizationName">Set organization name</string>
    <string name="title_dialog_SetOrganizationName">set the name of the organization under management</string>
    <string name="title_SetLockScreenInfo">Set lock screen info</string>
    <string name="title_dialog_SetLockScreenInfo">Set the device owner information to be shown on the lock screen.</string>
    <string name="title_LockDefaultLauncher">Lock default launcher</string>
    <string name="title_dialog_LockDefaultPackageInstaller">Lock default package installer</string>
    <string name="title_EnableBackupService">Enable system backup</string>
    <string name="title_SetUserRestrictions">Set user restrictions</string>
    <string name="hint_restrictionkey">Please input the key of the restriction</string>
    <string name="bt_add">Add</string>
    <string name="title_show_notification">Show notification</string>
    <string name="title_deleteSucceededApk">Delete the apk after successful installation</string>
    <string name="checkbox_installWithAnotherAfterFail">Enable this feature</string>
    <string name="tv_installWithAnotherAfterFail">This function needs to open the \"Show notification\"
        \nAfter failed installation, you can initiate the installation of specified installer in the notification
        \nPlease enter the package name or full activity name of the specified application.If left blank, it will be determined by the system</string>
    <string name="title_AppTheme">Theme</string>
    <string name="AppTheme_MODE_NIGHT_NO">Light</string>
    <string name="AppTheme_MODE_NIGHT_YES">Dark</string>
    <string name="AppTheme_MODE_NIGHT_FOLLOW_SYSTEM">Follow system</string>
    <string name="title_bugReport">Bug report</string>
    <string name="title_ignoreBatteryOptimization">Ignore battery optimization</string>
    <string name="title_about_install">Installation</string>
    <string name="title_others">Others</string>
</resources>