<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:key="show_notification"
        app:summary="@string/show_tip"
        app:title="@string/show_title" />
    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:key="needconfirm"
        app:summaryOff="@string/summary_off_needconfirm"
        app:summaryOn="@string/summary_on_needconfirm"
        app:title="@string/confirm_title" />
    <Preference
        app:key="manualAuthorize"
        app:summary="@string/summary_manualAuthorize"
        app:title="@string/title_manualAuthorize" />
    <PreferenceCategory app:title="@string/name_install1">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="enable1"
            app:summaryOff="@string/summaryOff"
            app:summaryOn="@string/summaryOn"
            app:title="@string/enable_title" />
        <Preference
            app:key="avInstall1"
            app:title="@string/title_installer_available_state" />
        <Preference
            app:key="icebox_supported"
            app:title="@string/title_icebox_support_state" />
        <Preference
            app:key="icebox_permission"
            app:title="@string/title_icebox__authorization_state" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/name_install2">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="enable2"
            app:summaryOff="@string/summaryOff"
            app:summaryOn="@string/summaryOn"
            app:title="@string/enable_title" />
        <Preference
            app:key="avInstall2"
            app:title="@string/title_installer_available_state" />
        <Preference
            app:key="getOwnerPackageNameAndSDKVersion"
            app:title="@string/title_delegated_OwnerPackageNameAndSDKVersion" />
        <Preference
            app:key="getDelegatedScopes"
            app:title="@string/title_delegated_authorization_state" />
        <PreferenceCategory app:title="@string/name_install3">
            <SwitchPreferenceCompat
                app:defaultValue="true"
                app:key="enable3"
                app:summaryOff="@string/summaryOff"
                app:summaryOn="@string/summaryOn"
                app:title="@string/enable_title" />
            <Preference
                app:key="avInstall3"
                app:title="@string/title_installer_available_state" />
            <Preference
                app:key="shizuku_service"
                app:title="@string/title_shizuku_service_state" />
            <Preference
                app:key="shizuku_permission"
                app:title="@string/title_shizuku_authorization_state" />

        </PreferenceCategory>


    </PreferenceCategory>
    <PreferenceCategory app:title="@string/name_install4">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="enable4"
            app:summaryOff="@string/summaryOff"
            app:summaryOn="@string/summaryOn"
            app:title="@string/enable_title" />
        <Preference
            app:key="avInstall4"
            app:title="@string/title_show_root_no_click2request" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/name_install5">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="enable5"
            app:summaryOff="@string/summaryOff"
            app:summaryOn="@string/summaryOn"
            app:title="@string/enable_title" />
        <Preference
            app:key="dpm_settings"
            app:title="@string/dpmSettings" />
        <Preference
            app:key="avInstall5"
            app:title="@string/title_not_deviceowner" />

    </PreferenceCategory>
</PreferenceScreen>