<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/name_install2">
        <SwitchPreference
            android:defaultValue="true"
            android:key="enable2"
            android:summaryOff="@string/summaryOff"
            android:summaryOn="@string/summaryOn"
            android:title="@string/enable_title" />
        <Preference
            android:key="getOwnerPackageName"
            android:title="已安装的托管主应用包名" />
        <Preference
            android:key="getOwnerSDKVersion"
            android:title="托管应用SDK版本" />
        <Preference
            android:key="getDelegatedScopes"
            android:title="本应用已得到的托管授权" />
        <Preference
            android:key="avInstall2"
            android:title="@string/request" />
    </PreferenceCategory>
</PreferenceScreen>